# Sum.

./: README.md
LAB10/1/: Begin18.cpp  Begin18.h  Boolean27.cpp  Boolean27.h  ConsoleApplication23.vcxproj  ConsoleApplication23.vcxproj.filters  Param59.cpp  Param59.h  main.cpp
LAB11/1/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
LAB2/: ConsoleApplication12.cpp  ConsoleApplication13.cpp
LAB3/: ConsoleApplication15.cpp
LAB4/: ConsoleApplication16.cpp
LAB5./: ConsoleApplication17.cpp
LAB6/: ConsoleApplication18.cpp
LAB7/: ConsoleApplication19.cpp
LAB9/1/: ConsoleApplication22.vcxproj  ConsoleApplication22.vcxproj.filters  String40.cpp  String40.h  String_replace.h  String_replace19.cpp  input.txt  main.cpp  output.txt
